# poc-typst-webapp-alternative

./: Cargo.toml  README.md
protocol/: Cargo.toml
protocol/src/: lib.rs
res/: index.css  index.html  index.mjs
server/: Cargo.toml
server/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
