[package]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "client"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
operational-transform = "0.6"
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
time = "0.3"
ttf-parser = "0.20"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"BinaryType",
	"Document",
	"Element",
	"HtmlTextAreaElement",
	"InputEvent",
	"Location",
	"MessageEvent",
	"WebSocket",
	"Window",
	"console",
] }

comemo = "0.3"
typst = { git = "https://github.com/typst/typst", rev = "67e87149ab85d1254ccb3dfcb1080872e4d69c4e" }
typst-library = { git = "https://github.com/typst/typst", rev = "67e87149ab85d1254ccb3dfcb1080872e4d69c4e" }
